last monute changes being made

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
           <a class="nav-link" href="/saved">Saved Articles</a>
         </li>
         <li class="nav-item">
-          <button class="btn btn-danger scrape" type="button">Scrape New Articles</button>
+          <button class="btn btn-danger scrape" type="button">Scrape For New Articles</button>
         </li>
       </ul>
     </div>
@@ -33,8 +33,8 @@
 
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-3">Mongo Scraper</h1>
-      <p class="lead">BBC Football Edition</p>
+      <h1 class="display-3">Footy Scraper </h1>
+      <p class="lead">Scraping from BBC Football</p>
     </div>
   </div>
 
