--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -9,7 +9,7 @@
       </div>
       <div class="col-lg-4 align-self-end text-right">
         <button class="btn btn-danger m-2 btn-remove" data-id="{{this._id}}">Remove</button>
-        <button class="btn btn-success m-2 btn-view-notes" data-id="{{this._id}}">View Notes</button>
+        <button class="btn btn-success m-2 btn-view-notes" data-id="{{this._id}}">View Comments</button>
       </div>
     </div>
   </div>
